--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,172 @@
-.App {
+h1{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.showcase {
+  width: 100%;
+  height: 500px;
+  border: 1px solid #ccc;
+  position: relative;
+  background-size: 100% 100%;
+  background-position: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.arrow {
+  position: absolute;
+  font-size: 50px;
+  cursor: pointer;
+  font-weight: bold;
+  padding: 10px 10px 20px 10px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: white; 
+  z-index: 10;
 }
 
-.App-link {
-  color: #61dafb;
+.top-left {
+  top: 40%;
+  left: 10px;
+  transform: translateY(-50%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.top-right {
+  top: 40%;
+  right: 10px;
+  transform: translateY(-50%);
+}
+
+.arrow:hover {
+  background-color: #ccc;
+  opacity: 0.5;
+  color: #000;
+}
+
+.showcase-image {
+  width: 100%;
+  height: 100%;
+}
+
+.thumbnails {
+  margin-top: 10px;
+}
+
+.thumbnails img {
+  width: 150px;
+  height: 150px;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  margin: 0 5px;
+}
+
+.carousel-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.selected-thumbnail {
+  transform: scale(1.2);
+  z-index: 10;
+  border: 2px solid black; 
+}
+
+/* Responsive media queries */
+@media only screen and (max-width: 600px) {
+  .arrow {
+    font-size: 8vw;
+    padding: 2vw 4vw;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .top-left {
+    top: 40%;
+    left: 2%;
+  }
+  .top-right {
+    top: 40%;
+    right: 2%;
+  }
+  
+  .thumbnails img {
+    width: 90%;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  /* Additional styles for small devices (portrait tablets and large phones, 600px and up) */
+  .arrow {
+    font-size: 4vw;
+  }
+  
+  .top-left {
+    top: 50%;
+    left: 2%;
+  }
+  .top-right {
+    top: 50%;
+    right: 2%;
+  }
+  
+  .thumbnails img {
+    width: 90%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  /* Additional styles for medium devices (landscape tablets, 768px and up) */
+  .arrow {
+    font-size: 4vw;
+  }
+  
+  .top-left {
+    top: 50%;
+    left: 2%;
+  }
+  .top-right {
+    top: 50%;
+    right: 2%;
+  }
+  
+  .thumbnails img {
+    width: 90%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  /* Additional styles for large devices (laptops/desktops, 992px and up) */
+  .arrow {
+    font-size: 4vw;
+  }
+  
+  .top-left {
+    top: 50%;
+    left: 2%;
+  }
+  .top-right {
+    top: 50%;
+    right: 2%;
+  }
+  
+  .thumbnails img {
+    width: 90%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  /* Additional styles for extra-large devices (large laptops and desktops, 1200px and up) */
+  .arrow {
+    font-size: 2vw;
+  }
+  
+  .top-left {
+    top: 45%;
+    left: 2%;
+  }
+  .top-right {
+    top: 45%;
+    right: 2%;
+  }
+  
+  .thumbnails img {
+    width: 90%;
   }
 }
